# chemical-space-estimation

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 10_plant_diversity.ipynb  1_data_stats.ipynb  2_chemical_class_distribution.ipynb  3_run_cleaner.ipynb  4_get_spectral_entropy_scores.py  5_create_entropy_sim_matrix.py  6_ms2_clustering.ipynb  7_literature_known_space.ipynb  8_estimating_chemical_space_m+h.ipynb  9_shuffle_curve.ipynb  utils.py
