[tool.poetry]
name = "unknown-chem-space"
version = "0.1.0"
description = ""
authors = ["Chloe Engler Hart <engler.chloe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
rdkit = "^2024.3.6"
matchms = "^0.28.2"
matplotlib-venn = "^1.1.1"
ipykernel = "^6.29.5"
statsmodels = "^0.14.4"
obonet = "^1.1.0"
fastparquet = "^2024.11.0"
ms-entropy = "^1.3.3"
networkx = "^3.4.2"
fastcluster = "^1.2.6"
python-igraph = "^0.11.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
